@@ -3,7 +3,7 @@
 static VALUE m<%= module_name %>;
 static VALUE m<%= extension_module_name %>;
 
-void Init_ext() {
+void Init_extension() {
   m<%= module_name %> = rb_define_module("<%= module_name %>");
-  m<%= extension_module_name %> = rb_define_module_under("<%= module_name %>", "<%= extension_module_name %>");
+  m<%= extension_module_name %> = rb_define_module_under(m<%= module_name %>, "<%= extension_module_name %>");
 }
